--- a/Demo Project/Test Application/Test Application.vcproj
+++ b/Demo Project/Test Application/Test Application.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="windows-1251"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
+	Version="9.00"
 	Name="Photon Mappinng Test"
 	ProjectGUID="{CF7C57F1-8193-4E8C-995C-1C4D95DE5222}"
 	RootNamespace="FractureTest"
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(SolutionDir)\Dependencies\GLee\Include&quot;;&quot;$(SolutionDir)\Dependencies\GLFW\Include&quot;;&quot;$(SolutionDir)\Base Libraries\Base Math Library&quot;;&quot;$(SolutionDir)\Base Libraries\Base Render Library&quot;"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)\Dependencies\OpenCL\NVIDIA\Include&quot;;&quot;$(SolutionDir)\Dependencies\GLee\Include&quot;;&quot;$(SolutionDir)\Dependencies\GLFW\Include&quot;;&quot;$(SolutionDir)\Base Libraries\Base Math Library&quot;;&quot;$(SolutionDir)\Base Libraries\Base Render Library&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -61,9 +61,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="glfw.lib glee.lib opengl32.lib glu32.lib"
+				AdditionalDependencies="glfw.lib glee.lib opengl32.lib glu32.lib OpenCL.lib"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="&quot;$(SolutionDir)\Dependencies\GLee\Lib&quot;;&quot;$(SolutionDir)\Dependencies\GLFW\Lib&quot;"
+				AdditionalLibraryDirectories="&quot;$(SolutionDir)\Dependencies\OpenCL\NVIDIA\Lib\Windows&quot;;&quot;$(SolutionDir)\Dependencies\GLee\Lib&quot;;&quot;$(SolutionDir)\Dependencies\GLFW\Lib&quot;"
 				IgnoreDefaultLibraryNames="libc.lib"
 				GenerateDebugInformation="true"
 				SubSystem="1"
@@ -118,7 +118,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="&quot;$(SolutionDir)\Dependencies\GLee\Include&quot;;&quot;$(SolutionDir)\Dependencies\GLFW\Include&quot;;&quot;$(SolutionDir)\Base Libraries\Base Math Library&quot;;&quot;$(SolutionDir)\Base Libraries\Base Render Library&quot;"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)\Dependencies\OpenCL\NVIDIA\Include&quot;;&quot;$(SolutionDir)\Dependencies\GLee\Include&quot;;&quot;$(SolutionDir)\Dependencies\GLFW\Include&quot;;&quot;$(SolutionDir)\Base Libraries\Base Math Library&quot;;&quot;$(SolutionDir)\Base Libraries\Base Render Library&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -137,9 +137,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="glfw.lib glee.lib opengl32.lib glu32.lib"
+				AdditionalDependencies="glfw.lib glee.lib opengl32.lib glu32.lib OpenCL.lib"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="&quot;$(SolutionDir)\Dependencies\GLee\Lib&quot;;&quot;$(SolutionDir)\Dependencies\GLFW\Lib&quot;"
+				AdditionalLibraryDirectories="&quot;$(SolutionDir)\Dependencies\OpenCL\NVIDIA\Lib\Windows&quot;;&quot;$(SolutionDir)\Dependencies\GLee\Lib&quot;;&quot;$(SolutionDir)\Dependencies\GLFW\Lib&quot;"
 				IgnoreDefaultLibraryNames="libc.lib"
 				GenerateDebugInformation="true"
 				SubSystem="1"
@@ -184,6 +184,10 @@
 		<Filter
 			Name="Source Files"
 			>
+			<File
+				RelativePath=".\render.cl"
+				>
+			</File>
 			<File
 				RelativePath=".\Source.cpp"
 				>
