--- a/Demo Project/Test Application/Test Application.vcproj
+++ b/Demo Project/Test Application/Test Application.vcproj
@@ -18,7 +18,7 @@
 	<Configurations>
 		<Configuration
 			Name="Debug (NVIDIA)|Win32"
-			OutputDirectory="$(ProjectDir)$(ConfigurationName)"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
 			CharacterSet="1"
@@ -93,7 +93,7 @@
 		</Configuration>
 		<Configuration
 			Name="Release (NVIDIA)|Win32"
-			OutputDirectory="$(ProjectDir)$(ConfigurationName)"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
 			CharacterSet="1"
@@ -338,13 +338,17 @@
 			Name="Source Files"
 			>
 			<File
-				RelativePath=".\render.cl"
-				>
-			</File>
-			<File
 				RelativePath=".\Source.cpp"
 				>
 			</File>
+			<Filter
+				Name="OpenCL"
+				>
+				<File
+					RelativePath="..\OpenCLSource\render.cl"
+					>
+				</File>
+			</Filter>
 		</Filter>
 	</Files>
 	<Globals>
